2008-08-12  Ivan Frade  <ivan.frade@nokia.com>

	* src/trackerd/tracker-keywords.c: Propagating errors coming from
	the indexer, instead overwrite them in the daemon.
	
2008-08-12  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-daemon.c:
	* src/trackerd/tracker-dbus.c: Don't resume indexing after the
	dbus request without checking if we are manually paused or paused
	for IO first.
	
	* src/trackerd/tracker-monitor.c: Make sure we pause when we get
	monitor events from the system.
	
	* src/trackerd/tracker-crawler.c: 
	* src/trackerd/tracker-processor.c: Don't send ANYTHING to the
	indexer or crawl any files while paused from IO as well as manually.
	
	* src/trackerd/tracker-status.c: Make sure we send the right state
	up to the applet about being paused from IO and for being on
	battery. 

2008-08-12  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-main.c: Use GStaticPrivate for the private
	data here and make sure we tell the processor to stop now when we
	are given the shutdown signal.

2008-08-12  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-main.c: (initialize_databases), (main):
	Fixed some errors in the last commit.

2008-08-12  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-crawler.c:
	* src/trackerd/tracker-daemon.c:
	* src/trackerd/tracker-dbus.c: 
	* src/trackerd/tracker-main.[ch]: 
	* src/trackerd/tracker-processor.c: 
	* src/trackerd/tracker-status.[ch]: Hold all valuable states in
	the status module, like is_readonly, is_first_time_index,
	is_running, etc.

2008-08-12  Ivan Frade  <ivan.frade@nokia.com>

	* src/libtracker-db/tracker-db-index
	(tracker_db_index_flush): It is not necessary to close and open
	the index after flush.
	
2008-08-11  Ivan Frade  <ivan.frade@nokia.com>

	* src/libtracker/tracker-unique.c: Added new file.
	
2008-08-11  Ivan Frade  <ivan.frade@nokia.com>

	New methods GetSum, GetCount, GetUniqueValues. Patch by Mikael
	Ottela.

	* data/dbus/tracker-metadata.xml